--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,37 @@
-version: '3'
+version: "3.7"
 
 services:
-    nginx:
+    server:
         build:
             context: .
-            dockerfile: docker/nginx.Dockerfile
+            dockerfile: docker/Dockerfile
+        container_name: server
+        working_dir: /var/www
+        volumes:
+            - ./:/var/www
+        depends_on:
+            - database
+
+    database:
+        image: mysql:8.2.0
+        container_name: database
         ports:
-            - "8090:80"
+            - '33081:3308'
+        environment:
+            - MYSQL_ROOT_PASSWORD=123456
+            - MYSQL_DATABASE=footberg_db
+            - MYSQL_USER=footberg
+            - MYSQL_PASSWORD=footberg
+
+    nginx:
+        image: nginx:stable
         container_name: nginx
+        restart: no
         links:
-            - app
+            - server
+        ports:
+            - "10021:80"
         volumes:
-            - ./:/var/www/laravel-docker
-    app:
-        build:
-            context: .
-            dockerfile: docker/app.Dockerfile
-        volumes:
-            - ./:/var/www/laravel-docker
-        links:
-            - mysql
-        container_name: app
+            - ./:/var/www
+            - ./docker/conf.d/nginx.conf:/etc/nginx/conf.d/default.conf
+
