--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,15 +13,18 @@ services:
             - database
 
     database:
-        image: mysql:8.2.0
+        image: mysql:latest
         container_name: database
         ports:
-            - '33081:3306'
+            - "8899:3306"
+        volumes:
+            - ./tmp/database:/var/lib/mysql
         environment:
-            - MYSQL_ROOT_PASSWORD=root
-            - MYSQL_DATABASE=footberg_db
-            - MYSQL_USER=footberg
-            - MYSQL_PASSWORD=footberg
+             MYSQL_ROOT_PASSWORD: root
+             MYSQL_DATABASE: footberg_db
+             MYSQL_USER: footberg
+             MYSQL_PASSWORD: footberg
+        command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
 
     nginx:
         image: nginx:stable
