--- a/.env.docker
+++ b/.env.docker
@@ -62,3 +62,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+#todo define
+VONAGE_KEY=
+VONAGE_SECRET=
+VONAGE_SMS_FROM=
